1 Header (HTML CSS JS)

--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -2,7 +2,6 @@
 	<div class="header__container">
 		<a href="" class="header__logo"><img src="@img/logo.svg" alt="Logo"></a>
 		<div class="header__menu menu">
-			<button type="button" class="menu__icon icon-menu"><span></span></button>
 			<nav class="menu__body">
 				<ul class="menu__list">
 					<li class="menu__item"><a href="" class="menu__link">Services</a></li>
@@ -12,6 +11,9 @@
 				</ul>
 			</nav>
 		</div>
-		<a href="" class="header__button">Resume</a>
+		<div class="header__actions">
+			<a href="" class="header__button">Resume</a>
+			<button type="button" class="menu__icon icon-menu"><span></span></button>
+		</div>
 	</div>
 </header>
