--- a/src/home.html
+++ b/src/home.html
@@ -7,8 +7,24 @@
 <body>
 	<div class="wrapper">
 		@@include('html/_header.htm',{})
-		<main class="page">
-
+		<main data-fp class="page">
+			<section data-fp-section class="page__main main-section">
+				<div class="main-section__container">
+					<div class="main-section__content">
+						<div class="main-section__title title">
+							<div class="title__label">MY NAME IS</div>
+							<h1 class="title__value title__value_big">Alex <span>Smith.</span></h1>
+						</div>
+						<div class="main-section__text text">
+							Creative front-end developer with more than +5 years of experience in enterprise companies and
+							startups. Proficient in JavaScript, Angular, and React. Passionate about UI/UX
+						</div>
+					</div>
+					<div class="main-section__image">
+						<img src="@img/main/picture.png" alt="Picture">
+					</div>
+				</div>
+			</section>
 		</main>
 		@@include('html/_footer.htm',{})
 	</div>
