2 Section Main (HTML CSS JS) not adaptive

--- a/src/home.html
+++ b/src/home.html
@@ -16,12 +16,30 @@
 							<h1 class="title__value title__value_big">Alex <span>Smith.</span></h1>
 						</div>
 						<div class="main-section__text text">
-							Creative front-end developer with more than +5 years of experience in enterprise companies and
-							startups. Proficient in JavaScript, Angular, and React. Passionate about UI/UX
+							<p>Creative front-end developer with more than +5 years of experience in enterprise companies and
+								startups. Proficient in JavaScript, Angular, and React. Passionate about UI/UX</p>
 						</div>
+						<ul class="main-section__social social">
+							<li class="social__item">
+								<a href="" class="social__link _icon-s-instagram"></a>
+							</li>
+							<li class="social__item">
+								<a href="" class="social__link _icon-s-git"></a>
+							</li>
+							<li class="social__item">
+								<a href="" class="social__link _icon-s-twitter"></a>
+							</li>
+							<li class="social__item">
+								<a href="" class="social__link _icon-s-linkedin"></a>
+							</li>
+						</ul>
 					</div>
-					<div class="main-section__image">
-						<img src="@img/main/picture.png" alt="Picture">
+					<div class="main-section__decor decor-main-section">
+						<div class="decor-main-section__box">
+							<div class="decor-main-section__image">
+								<img class="decor-main-section__picture" src="@img/main/picture.png" alt="Picture">
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
