--- a/src/home.html
+++ b/src/home.html
@@ -8,7 +8,8 @@
 	<div class="wrapper">
 		@@include('html/_header.htm',{})
 		<main data-fp class="page">
-			<section data-fp-section class="page__main main-section">
+			<!-- 
+				<section data-fp-section class="page__main main-section">
 				<div class="main-section__container">
 					<div class="main-section__content">
 						<div class="main-section__title title">
@@ -42,42 +43,44 @@
 						</div>
 					</div>
 				</div>
-			</section>
-			<section data-fp-section class="page__services services">
-				<div class="services__container">
-					<div class="services__title title">
-						<div class="title__label">SERVICES</div>
-						<h2 class="title__value">Specialized in</h2>
+				</section>
+				<section data-fp-section class="page__services services">
+					<div class="services__container">
+						<div class="services__title title">
+							<div class="title__label">SERVICES</div>
+							<h2 class="title__value">Specialized in</h2>
+						</div>
+						<div class="services__items">
+							<article class="services__item item-service">
+								<div class="item-service__icon">
+									<img src="@img/services/icons/01.svg" alt="Icon">
+								</div>
+								<h4 class="item-service__title">UI/UX Design</h4>
+								<div class="item-service__text">Turn what you have in mind of a digital product into reality.
+									For any platform you consider.</div>
+							</article>
+							<article class="services__item item-service">
+								<div class="item-service__icon">
+									<img src="@img/services/icons/02.svg" alt="Icon">
+								</div>
+								<h4 class="item-service__title">Application Development</h4>
+								<div class="item-service__text">Standard designing, building, and implementing your applications
+									with documentation.
+								</div>
+							</article>
+							<article class="services__item item-service">
+								<div class="item-service__icon">
+									<img src="@img/services/icons/03.svg" alt="Icon">
+								</div>
+								<h4 class="item-service__title">Web Development</h4>
+								<div class="item-service__text">Create and maintain your websites and also take care of its
+									performance and traffic capacity.</div>
+							</article>
+						</div>
 					</div>
-					<div class="services__items">
-						<article class="services__item item-service">
-							<div class="item-service__icon">
-								<img src="@img/services/icons/01.svg" alt="Icon">
-							</div>
-							<h4 class="item-service__title">UI/UX Design</h4>
-							<div class="item-service__text">Turn what you have in mind of a digital product into reality.
-								For any platform you consider.</div>
-						</article>
-						<article class="services__item item-service">
-							<div class="item-service__icon">
-								<img src="@img/services/icons/02.svg" alt="Icon">
-							</div>
-							<h4 class="item-service__title">Application Development</h4>
-							<div class="item-service__text">Standard designing, building, and implementing your applications
-								with documentation.
-							</div>
-						</article>
-						<article class="services__item item-service">
-							<div class="item-service__icon">
-								<img src="@img/services/icons/03.svg" alt="Icon">
-							</div>
-							<h4 class="item-service__title">Web Development</h4>
-							<div class="item-service__text">Create and maintain your websites and also take care of its
-								performance and traffic capacity.</div>
-						</article>
-					</div>
-				</div>
-			</section>
+				</section>
+				-->
+
 			<section data-fp-section class="page__portfolio portfolio">
 				<div class="portfolio__container">
 					<div class="portfolio__header">
@@ -99,12 +102,60 @@
 									</a>
 									<div class=" item-portfolio__body">
 										<h4 class="item-portfolio__title">
-											<a href="" class="item-portfolio__link-title">Agency Website.</a>
+											<a href="" class="item-portfolio__link-title">Agency Website</a>
 										</h4>
+										<div class="item-portfolio__footer">
+											<a href="" class="item-portfolio__category category-link">WordPress</a>
+											<a href="" class="item-portfolio__link _icon-link"></a>
+										</div>
 									</div>
-									<div class="item-portfolio__footer">
-										<a href="" class="item-portfolio__category">WordPress</a>
-										<a href="" class="item-portfolio__link _icon-link"></a>
+								</article>
+							</div>
+							<div class="portfolio__slide swiper-slide">
+								<article class="item-portfolio">
+									<a href="" class="item-portfolio__image-ibg">
+										<img src="@img/portfolio/02.jpg" alt="Agency Website">
+									</a>
+									<div class=" item-portfolio__body">
+										<h4 class="item-portfolio__title">
+											<a href="" class="item-portfolio__link-title">Dashboard Website</a>
+										</h4>
+										<div class="item-portfolio__footer">
+											<a href="" class="item-portfolio__category category-link">React</a>
+											<a href="" class="item-portfolio__link _icon-link"></a>
+										</div>
+									</div>
+								</article>
+							</div>
+							<div class="portfolio__slide swiper-slide">
+								<article class="item-portfolio">
+									<a href="" class="item-portfolio__image-ibg">
+										<img src="@img/portfolio/03.jpg" alt="Agency Website">
+									</a>
+									<div class=" item-portfolio__body">
+										<h4 class="item-portfolio__title">
+											<a href="" class="item-portfolio__link-title">Support Center Website</a>
+										</h4>
+										<div class="item-portfolio__footer">
+											<a href="" class="item-portfolio__category category-link">PHP</a>
+											<a href="" class="item-portfolio__link _icon-link"></a>
+										</div>
+									</div>
+								</article>
+							</div>
+							<div class="portfolio__slide swiper-slide">
+								<article class="item-portfolio">
+									<a href="" class="item-portfolio__image-ibg">
+										<img src="@img/portfolio/02.jpg" alt="Agency Website">
+									</a>
+									<div class=" item-portfolio__body">
+										<h4 class="item-portfolio__title">
+											<a href="" class="item-portfolio__link-title">Dashboard Website</a>
+										</h4>
+										<div class="item-portfolio__footer">
+											<a href="" class="item-portfolio__category category-link">React</a>
+											<a href="" class="item-portfolio__link _icon-link"></a>
+										</div>
 									</div>
 								</article>
 							</div>
