4 Section Portfolios (HTML CSS JS responsive)

--- a/src/home.html
+++ b/src/home.html
@@ -118,7 +118,10 @@
 									</a>
 									<div class=" item-portfolio__body">
 										<h4 class="item-portfolio__title">
-											<a href="" class="item-portfolio__link-title">Dashboard Website</a>
+											<a href="" class="item-portfolio__link-title">Dashboard Website
+												Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore recusandae dolor
+												nihil nostrum debitis ipsum.
+											</a>
 										</h4>
 										<div class="item-portfolio__footer">
 											<a href="" class="item-portfolio__category category-link">React</a>
