--- a/src/home.html
+++ b/src/home.html
@@ -8,8 +8,8 @@
 	<div class="wrapper">
 		@@include('html/_header.htm',{})
 		<main data-fp class="page">
-			<!-- 
-				<section data-fp-section class="page__main main-section">
+			<!--
+			<section data-fp-section class="page__main main-section">
 				<div class="main-section__container">
 					<div class="main-section__content">
 						<div class="main-section__title title">
@@ -43,44 +43,42 @@
 						</div>
 					</div>
 				</div>
-				</section>
-				<section data-fp-section class="page__services services">
-					<div class="services__container">
-						<div class="services__title title">
-							<div class="title__label">SERVICES</div>
-							<h2 class="title__value">Specialized in</h2>
-						</div>
-						<div class="services__items">
-							<article class="services__item item-service">
-								<div class="item-service__icon">
-									<img src="@img/services/icons/01.svg" alt="Icon">
-								</div>
-								<h4 class="item-service__title">UI/UX Design</h4>
-								<div class="item-service__text">Turn what you have in mind of a digital product into reality.
-									For any platform you consider.</div>
-							</article>
-							<article class="services__item item-service">
-								<div class="item-service__icon">
-									<img src="@img/services/icons/02.svg" alt="Icon">
-								</div>
-								<h4 class="item-service__title">Application Development</h4>
-								<div class="item-service__text">Standard designing, building, and implementing your applications
-									with documentation.
-								</div>
-							</article>
-							<article class="services__item item-service">
-								<div class="item-service__icon">
-									<img src="@img/services/icons/03.svg" alt="Icon">
-								</div>
-								<h4 class="item-service__title">Web Development</h4>
-								<div class="item-service__text">Create and maintain your websites and also take care of its
-									performance and traffic capacity.</div>
-							</article>
-						</div>
+			</section>
+			<section data-fp-section class="page__services services">
+				<div class="services__container">
+					<div class="services__title title">
+						<div class="title__label">SERVICES</div>
+						<h2 class="title__value">Specialized in</h2>
 					</div>
-				</section>
-				-->
-
+					<div class="services__items">
+						<article class="services__item item-service">
+							<div class="item-service__icon">
+								<img src="@img/services/icons/01.svg" alt="Icon">
+							</div>
+							<h4 class="item-service__title">UI/UX Design</h4>
+							<div class="item-service__text">Turn what you have in mind of a digital product into reality.
+								For any platform you consider.</div>
+						</article>
+						<article class="services__item item-service">
+							<div class="item-service__icon">
+								<img src="@img/services/icons/02.svg" alt="Icon">
+							</div>
+							<h4 class="item-service__title">Application Development</h4>
+							<div class="item-service__text">Standard designing, building, and implementing your applications
+								with documentation.
+							</div>
+						</article>
+						<article class="services__item item-service">
+							<div class="item-service__icon">
+								<img src="@img/services/icons/03.svg" alt="Icon">
+							</div>
+							<h4 class="item-service__title">Web Development</h4>
+							<div class="item-service__text">Create and maintain your websites and also take care of its
+								performance and traffic capacity.</div>
+						</article>
+					</div>
+				</div>
+			</section>
 			<section data-fp-section class="page__portfolio portfolio">
 				<div class="portfolio__container">
 					<div class="portfolio__header">
@@ -162,6 +160,31 @@
 									</div>
 								</article>
 							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			-->
+			<section data-fp-section class="page__career career">
+				<div data-tabs class="career__container">
+					<div class="career__title title">
+						<div class="title__label">career path</div>
+						<h2 class="title__value">Work Experiences</h2>
+					</div>
+					<nav data-tabs-titles class="tabs__navigation">
+						<button type="button" class="tabs__title _tab-active">Таб №1</button>
+						<button type="button" class="tabs__title">Таб №2</button>
+						<button type="button" class="tabs__title">Таб №3</button>
+					</nav>
+					<div data-tabs-body class="tabs__content">
+						<div class="tabs__body">
+							123
+						</div>
+						<div class="tabs__body">
+							456
+						</div>
+						<div class="tabs__body">
+							789
 						</div>
 					</div>
 				</div>
