--- a/src/home.html
+++ b/src/home.html
@@ -171,19 +171,20 @@
 						<div class="title__label">career path</div>
 						<h2 class="title__value">Work Experiences</h2>
 					</div>
-					<nav data-tabs-titles class="tabs__navigation">
-						<button type="button" class="tabs__title _tab-active">Таб №1</button>
-						<button type="button" class="tabs__title">Таб №2</button>
-						<button type="button" class="tabs__title">Таб №3</button>
+					<nav data-tabs-titles class="career__navigation navigation-career">
+						<button type="button" class="navigation-career__title _tab-active">Apple</button>
+						<button type="button" class="navigation-career__title">Microsoft</button>
+						<button type="button" class="navigation-career__title">Facebook</button>
+						<button type="button" class="navigation-career__title">Slack</button>
 					</nav>
-					<div data-tabs-body class="tabs__content">
-						<div class="tabs__body">
+					<div data-tabs-body class="career__content content-career">
+						<div class="content-career__body">
 							123
 						</div>
-						<div class="tabs__body">
+						<div class="content-career__body">
 							456
 						</div>
-						<div class="tabs__body">
+						<div class="content-career__body">
 							789
 						</div>
 					</div>
