--- a/src/home.html
+++ b/src/home.html
@@ -80,7 +80,7 @@
 					</div>
 				</div>
 			</section>
-		
+
 			<section data-fp-section class="page__portfolio portfolio">
 				<div class="portfolio__container">
 					<div class="portfolio__header">
@@ -166,7 +166,7 @@
 					</div>
 				</div>
 			</section>
-			-->
+
 			<section data-fp-section class="page__career career">
 				<div data-tabs="768" class="career__container">
 					<div class="career__body">
@@ -308,6 +308,75 @@
 					</div>
 
 				</div>
+			</section>
+			-->
+
+			<section data-fp-section class="page__blog blog">
+				<div class="blog__container">
+					<div class="blog__title title">
+						<div class="title__label">MY ARTICLES</div>
+						<h2 class="title__value">Personal Blog</h2>
+					</div>
+					<div class="blog__items">
+						<article class="blog__item item-blog">
+							<a href="" class="item-blog__image-ibg">
+								<img src="@img/blog/01.jpg" alt="How to prototype in figma">
+							</a>
+							<div class="item-blog__body">
+								<h4 class="item-blog__title">
+									<a href="" class="item-blog__title">
+										How to prototype in figma
+									</a>
+								</h4>
+								<div class="item-blog__date date">July 15, 2021</div>
+								<div class="item-blog__text text">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id magna nec ante scelerisque
+									laoreet. Fusce finibus ...
+								</div>
+								<a href="" class="item-blog__link">Continue Reading</a>
+							</div>
+						</article>
+						<article class="blog__item item-blog">
+							<a href="" class="item-blog__image-ibg">
+								<img src="@img/blog/02.jpg" alt="Being more productive with Notion">
+							</a>
+							<div class="item-blog__body">
+								<h4 class="item-blog__title">
+									<a href="" class="item-blog__title">
+										Being more productive with Notion
+									</a>
+								</h4>
+								<div class="item-blog__date date">Aug 8, 2020</div>
+								<div class="item-blog__text text">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id magna nec ante scelerisque
+									laoreet. Fusce finibus ...
+								</div>
+								<a href="" class="item-blog__link">Continue Reading</a>
+							</div>
+						</article>
+						<article class="blog__item item-blog">
+							<a href="" class="item-blog__image-ibg">
+								<img src="@img/blog/03.jpg" alt="Beginners guide to adobe illustrator">
+							</a>
+							<div class="item-blog__body">
+								<h4 class="item-blog__title">
+									<a href="" class="item-blog__title">
+										Beginners guide to adobe illustrator
+									</a>
+								</h4>
+								<div class="item-blog__date date">Feb 19, 2021</div>
+								<div class="item-blog__text text">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id magna nec ante scelerisque
+									laoreet. Fusce finibus ...
+								</div>
+								<a href="" class="item-blog__link">Continue Reading</a>
+							</div>
+						</article>
+					</div>
+				</div>
+
+
+
 			</section>
 		</main>
 		@@include('html/_footer.htm',{})
