--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -4,10 +4,10 @@
 		<div class="header__menu menu">
 			<nav class="menu__body">
 				<ul class="menu__list">
-					<li class="menu__item"><a href="" class="menu__link">Services</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Portfolios</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Experience</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Blog</a></li>
+					<li class="menu__item"><a href="#" class="menu__link">Services</a></li>
+					<li class="menu__item"><a href="#" class="menu__link">Portfolios</a></li>
+					<li class="menu__item"><a href="#" class="menu__link">Experience</a></li>
+					<li class="menu__item"><a href="#" class="menu__link">Blog</a></li>
 				</ul>
 			</nav>
 		</div>
