--- a/src/home.html
+++ b/src/home.html
@@ -309,7 +309,7 @@
 
 				</div>
 			</section>
-			
+
 
 			<section data-fp-section class="page__blog blog">
 				<div class="blog__container">
@@ -378,7 +378,7 @@
 
 
 			</section>
-			-->
+
 			<section data-fp-section class="page__testimonials testimonials">
 				<div class="testimonials__container">
 					<div class="testimonials__title title">
@@ -421,6 +421,63 @@
 					</div>
 				</div>
 			</section>
+-->
+			<section data-fp-section class="page__skills skills">
+				<div class="skills__container">
+					<div class="skills__title title">
+						<div class="title__label">LEARNING PATH</div>
+						<h2 class="title__value">Education & Skills</h2>
+					</div>
+					<div class="skills__body">
+						<div class="skills__timeline">
+							<div class="timeline__item">
+								<div class="timeline__title">Kingston university</div>
+								<div class="timeline__text">Master's degree - Software Engineering</div>
+								<div class="timeline__date">2019 - 2021</div>
+							</div>
+							<div class="timeline__item">
+								<div class="timeline__title">Kingston university</div>
+								<div class="timeline__text">Bachelor's degree - Computer Engineering</div>
+								<div class="timeline__date">2015 - 2019</div>
+							</div>
+							<div class="timeline__item">
+								<div class="timeline__title">Westminster School</div>
+								<div class="timeline__text">Diploma's degree - Mathematics</div>
+								<div class="timeline__date">2013 - 2015</div>
+							</div>
+						</div>
+						<div class="skills__content content-skills">
+							<div class="content-skills__text text">
+								<p>
+									For 5+ years, I have been continuously learning in the field of front-end and experimenting
+									with new technologies and frameworks, and here you can see a summary of my skills.
+								</p>
+							</div>
+							<div class="content-skills__items">
+								<div class="content-skills__item">
+									<div class="content-skills__label">React</div>
+									<div class="content-skills__line">
+										<span style="width: 67.5%;"></span>
+									</div>
+								</div>
+								<div class="content-skills__item">
+									<div class="content-skills__label">Angular</div>
+									<div class="content-skills__line">
+										<span style="width: 52%;"></span>
+									</div>
+								</div>
+								<div class="content-skills__item">
+									<div class="content-skills__label">Javascript</div>
+									<div class="content-skills__line">
+										<span style="width: 64%;"></span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 		</main>
 		@@include('html/_footer.htm',{})
 	</div>
