8 Section Skills (HTML CSS JS responsive)

--- a/src/home.html
+++ b/src/home.html
@@ -429,7 +429,7 @@
 						<h2 class="title__value">Education & Skills</h2>
 					</div>
 					<div class="skills__body">
-						<div class="skills__timeline">
+						<div class="skills__timeline timeline">
 							<div class="timeline__item">
 								<div class="timeline__title">Kingston university</div>
 								<div class="timeline__text">Master's degree - Software Engineering</div>
