--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,19 +1,42 @@
 <div data-fp-section class="page__bottom bottom-page">
 	<section class="page__contacts contacts">
 		<div class="contacts__container">
+			<div class="skills__title title">
+				<div class="title__label">Be in touch with me</div>
+				<h2 class="title__value">Contacts</h2>
+			</div>
 			<div class="contacts__body">
 				<form action="#" class="contacts__form form">
 					<div class="form__item form__item-name">
-						<input autocomplete="off" type="text" name="form[]" data-error="Enter your name" data-required
-							placeholder="Name" class="form__input">
+						<input
+							autocomplete="off"
+							type="text"
+							name="form[]"
+							data-error="Enter your name"
+							data-required
+							placeholder="Name"
+							class="form__input"
+						/>
 					</div>
 					<div class="form__item form__item-email">
-						<input autocomplete="off" type="text" name="form[]" data-error="Enter your E-mail"
-							data-required="email" placeholder="Email" class="form__input">
+						<input
+							autocomplete="off"
+							type="text"
+							name="form[]"
+							data-error="Enter your E-mail"
+							data-required="email"
+							placeholder="Email"
+							class="form__input"
+						/>
 					</div>
 					<div class="form__item form__item-textarea">
-						<textarea autocomplete="off" name="form[]" placeholder="Message" data-error="Error"
-							class="form__input"></textarea>
+						<textarea
+							autocomplete="off"
+							name="form[]"
+							placeholder="Message"
+							data-error="Error"
+							class="form__input"
+						></textarea>
 					</div>
 					<div class="form__item">
 						<button type="submit" class="form__button">Send Message</button>
@@ -23,29 +46,41 @@
 					<ul class="contacts__list list-contacts">
 						<li class="list-contacts__item">
 							<div class="list-contacts__icon">
-								<img src="@img/contacts/icons/01.svg" alt="Address">
+								<img src="@img/contacts/icons/01.svg" alt="Address" />
 							</div>
 							<div class="list-contacts__content">
 								<div class="list-contacts__title">Address</div>
-								<a href="" class="list-contacts__text">3424 Layman Avenue, Fayetteville, NC</a>
+								<a
+									href="https://www.google.com/maps/place/%D0%A8%D0%B2%D0%B5%D1%80%D0%B8%D0%BD/@53.615988,11.3184325,12z/data=!3m1!4b1!4m6!3m5!1s0x47add992b50ef799:0x4251ae8ad8482c0!8m2!3d53.6355022!4d11.4012499!16zL20vMHFrNDQ?entry=ttu"
+									class="list-contacts__text"
+									>Germany, Schwerin</a
+								>
 							</div>
 						</li>
 						<li class="list-contacts__item">
 							<div class="list-contacts__icon">
-								<img src="@img/contacts/icons/02.svg" alt="Phone">
-							</div>
-							<div class="list-contacts__body">
-								<div class="list-contacts__title">Phone</div>
-								<a href="tel:5014141541" class="list-contacts__text">(501) 414-1541</a>
-							</div>
-						</li>
-						<li class="list-contacts__item">
-							<div class="list-contacts__icon">
-								<img src="@img/contacts/icons/03.svg" alt="E-Mail">
+								<img src="@img/contacts/icons/03.svg" alt="E-Mail" />
 							</div>
 							<div class="list-contacts__body">
 								<div class="list-contacts__title">E-Mail</div>
-								<a href="mailto:devchapter@gmail.com" class="list-contacts__text">devchapter@gmail.com</a>
+								<a
+									href="mailto:vitalii.soloninko@gmail.com"
+									class="list-contacts__text"
+									>vitalii.soloninko@gmail.com</a
+								>
+							</div>
+						</li>
+						<li class="list-contacts__item">
+							<div class="list-contacts__icon">
+								<img src="@img/contacts/icons/02.svg" alt="GitHub" />
+							</div>
+							<div class="list-contacts__body">
+								<div class="list-contacts__title">GitHub</div>
+								<a
+									href="https://github.com/VitaliiSoloninko"
+									class="list-contacts__text"
+									>Vitalii Soloninko</a
+								>
 							</div>
 						</li>
 					</ul>
