--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,13 +1,21 @@
 <header class="header">
 	<div class="header__container">
-		<a href="" class="header__logo"><img src="@img/logo.svg" alt="Logo"></a>
+		<a href="" class="header__logo"><img src="@img/logo.svg" alt="Logo" /></a>
 		<div class="header__menu menu">
 			<nav class="menu__body">
 				<ul class="menu__list">
-					<li class="menu__item"><a data-goto=".services" href="#" class="menu__link">Services</a></li>
-					<li class="menu__item"><a data-goto=".portfolio" href="#" class="menu__link">Portfolios</a></li>
-					<li class="menu__item"><a data-goto=".career" href="#" class="menu__link">Experience</a></li>
-					<li class="menu__item"><a data-goto=".blog" href="#" class="menu__link">Blog</a></li>
+					<li class="menu__item">
+						<a data-goto=".portfolio" href="#" class="menu__link">Portfolios</a>
+					</li>
+					<li class="menu__item">
+						<a data-goto=".career" href="#" class="menu__link">Experience</a>
+					</li>
+					<li class="menu__item">
+						<a data-goto=".skills" href="#" class="menu__link">Skills</a>
+					</li>
+					<li class="menu__item">
+						<a data-goto=".contacts" href="#" class="menu__link">Contacts</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
