--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -70,19 +70,6 @@
 								>
 							</div>
 						</li>
-						<li class="list-contacts__item">
-							<div class="list-contacts__icon">
-								<img src="@img/contacts/icons/02.svg" alt="GitHub" />
-							</div>
-							<div class="list-contacts__body">
-								<div class="list-contacts__title">GitHub</div>
-								<a
-									href="https://github.com/VitaliiSoloninko"
-									class="list-contacts__text"
-									>Vitalii Soloninko</a
-								>
-							</div>
-						</li>
 					</ul>
 				</div>
 			</div>
@@ -104,7 +91,7 @@
 					<a href="" class="social__link _icon-s-linkedin"></a>
 				</li>
 			</ul>
-			<div class="footer__copy">© 2022 - DevChapter</div>
+			<div class="footer__copy">© 2024 - Vitalii Soloninko</div>
 		</div>
 	</footer>
 </div>
