--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -11,7 +11,7 @@
 						<a data-goto=".career" href="#" class="menu__link">Experience</a>
 					</li>
 					<li class="menu__item">
-						<a data-goto=".skills" href="#" class="menu__link">Skills</a>
+						<a data-goto=".skills" href="#" class="menu__link">Education</a>
 					</li>
 					<li class="menu__item">
 						<a data-goto=".contacts" href="#" class="menu__link">Contacts</a>
