--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
 							<div class="main-section__title title">
 								<div class="title__label">MY NAME IS</div>
 								<h1 class="title__value title__value_big">
-									Vitalii <span>Soloninko.</span>
+									Vitalii <span>Soloninko</span>
 								</h1>
 							</div>
 							<div class="main-section__text text">
 								<p>
 									Creative frontend developer with 2 years of work experience in
 									Front-End development. Proficient in JavaScript. Passionate
-									about UI/UX.
+									about UI/UX. Now i'm studying Typescript and Angular.
 								</p>
 							</div>
 							<ul class="main-section__social social">
@@ -302,16 +302,10 @@
 									type="button"
 									class="navigation-career__title _tab-active"
 								>
-									Apple
+									Freelance
 								</button>
 								<button type="button" class="navigation-career__title">
-									Microsoft
-								</button>
-								<button type="button" class="navigation-career__title">
-									Facebook
-								</button>
-								<button type="button" class="navigation-career__title">
-									Slack
+									Grand
 								</button>
 							</nav>
 							<div data-tabs-body class="career__content content-career">
@@ -320,35 +314,35 @@
 										<div class="content-career__title">
 											Front-end Developer
 											<a href="" class="content-career__link-title"
-												>Apple .Inc</a
+												>Freelance</a
 											>
 										</div>
 										<div class="content-career__location">
-											California, United States
+											Schwerin, Germany
 										</div>
 										<div class="content-career__time">
-											Nov 2020 - Present · Full-time
+											Jun 2022 - Present · Part-time
 										</div>
 										<div class="content-career__categories">
-											<a href="" class="category-link">Swift</a>
-											<a href="" class="category-link">Go</a>
+											<a href="" class="category-link">Java Script</a>
+											<a href="" class="category-link">GULP</a>
+											<a href="" class="category-link">Webpack</a>
+											<a href="" class="category-link">SCSS</a>
+											<a href="" class="category-link">CSS</a>
+											<a href="" class="category-link">HTML</a>
 										</div>
 									</div>
 									<div class="content-career__main">
 										<ul class="content-career__list list-content-career">
 											<li class="list-content-career__item">
-												Improving overall website performance for mobile users.
+												Code and content optimization for fast work.
 											</li>
 											<li class="list-content-career__item">
-												Collaborate with back-end developers and web designers
-												to improve usability
+												Dynamic adaptation of web sites for any device.
 											</li>
 											<li class="list-content-career__item">
-												Add voice search feature for mobile app.
-											</li>
-											<li class="list-content-career__item">
-												Developing an admin panel to manage contents, users,
-												products and ...
+												Development of sites of different complexity and with
+												different features.
 											</li>
 										</ul>
 									</div>
@@ -357,115 +351,41 @@
 								<div class="content-career__body">
 									<div class="content-career__header">
 										<div class="content-career__title">
-											Front-end Developer
-											<a href="" class="content-career__link-title"
-												>Microsoft .Inc</a
-											>
+											Developer of IT materials and teacher of computer courses
+											<a href="" class="content-career__link-title">Grand</a>
 										</div>
-										<div class="content-career__location">
-											California, United States
-										</div>
+										<div class="content-career__location">Rivne, Ukraine</div>
 										<div class="content-career__time">
-											Nov 2020 - Present · Full-time
+											Sep 2009 - Feb 2022 · Full-time
 										</div>
 										<div class="content-career__categories">
-											<a href="" class="category-link">Swift</a>
-											<a href="" class="category-link">Go</a>
+											<a href="" class="category-link">Web design</a>
+											<a href="" class="category-link">Programming</a>
+											<a href="" class="category-link">Graphic design</a>
+											<a href="" class="category-link">3D graphics</a>
+											<a href="" class="category-link">Video editing</a>
+											<a href="" class="category-link">Microsoft Office</a>
 										</div>
 									</div>
 									<div class="content-career__main">
 										<ul class="content-career__list list-content-career">
 											<li class="list-content-career__item">
-												Improving overall website performance for mobile users.
+												Web design - HTML, CSS, Java Script
 											</li>
 											<li class="list-content-career__item">
-												Collaborate with back-end developers and web designers
-												to improve usability
+												Programming - Node.js
 											</li>
 											<li class="list-content-career__item">
-												Add voice search feature for mobile app.
+												Graphic design - Figma, Illustrator, Inkscape
 											</li>
 											<li class="list-content-career__item">
-												Developing an admin panel to manage contents, users,
-												products and ...
-											</li>
-										</ul>
-									</div>
-								</div>
-
-								<div class="content-career__body">
-									<div class="content-career__header">
-										<div class="content-career__title">
-											Front-end Developer
-											<a href="" class="content-career__link-title"
-												>Facebook .Inc</a
-											>
-										</div>
-										<div class="content-career__location">
-											California, United States
-										</div>
-										<div class="content-career__time">
-											Nov 2020 - Present · Full-time
-										</div>
-										<div class="content-career__categories">
-											<a href="" class="category-link">Swift</a>
-											<a href="" class="category-link">Go</a>
-										</div>
-									</div>
-									<div class="content-career__main">
-										<ul class="content-career__list list-content-career">
-											<li class="list-content-career__item">
-												Improving overall website performance for mobile users.
+												Microsoft Office - Word, Excel, PowerPoint (perfect)
 											</li>
 											<li class="list-content-career__item">
-												Collaborate with back-end developers and web designers
-												to improve usability
+												3D graphics - Blender, SketchUp
 											</li>
 											<li class="list-content-career__item">
-												Add voice search feature for mobile app.
-											</li>
-											<li class="list-content-career__item">
-												Developing an admin panel to manage contents, users,
-												products and ...
-											</li>
-										</ul>
-									</div>
-								</div>
-
-								<div class="content-career__body">
-									<div class="content-career__header">
-										<div class="content-career__title">
-											Front-end Developer
-											<a href="" class="content-career__link-title"
-												>Slack .Inc</a
-											>
-										</div>
-										<div class="content-career__location">
-											California, United States
-										</div>
-										<div class="content-career__time">
-											Nov 2020 - Present · Full-time
-										</div>
-										<div class="content-career__categories">
-											<a href="" class="category-link">Swift</a>
-											<a href="" class="category-link">Go</a>
-										</div>
-									</div>
-									<div class="content-career__main">
-										<ul class="content-career__list list-content-career">
-											<li class="list-content-career__item">
-												Improving overall website performance for mobile users.
-											</li>
-											<li class="list-content-career__item">
-												Collaborate with back-end developers and web designers
-												to improve usability
-											</li>
-											<li class="list-content-career__item">
-												Add voice search feature for mobile app.
-											</li>
-											<li class="list-content-career__item">
-												Developing an admin panel to manage contents, users,
-												products and ...
+												Video editing - DaVinci Resolve, Adobe Premiere Pro
 											</li>
 										</ul>
 									</div>
