Portfolio version 2.2 main

--- a/src/index.html
+++ b/src/index.html
@@ -23,16 +23,19 @@
 							</div>
 							<ul class="main-section__social social">
 								<li class="social__item">
-									<a href="" class="social__link _icon-s-instagram"></a>
+									<a
+										href="https://github.com/VitaliiSoloninko"
+										class="social__link"
+									>
+										<img src="@img/icons/github.svg" alt="GitHub" />
+									</a>
 								</li>
 								<li class="social__item">
-									<a href="" class="social__link _icon-s-git"></a>
-								</li>
-								<li class="social__item">
-									<a href="" class="social__link _icon-s-twitter"></a>
-								</li>
-								<li class="social__item">
-									<a href="" class="social__link _icon-s-linkedin"></a>
+									<a
+										href="https://www.linkedin.com/in/vitalii-soloninko-1a3987271/"
+										class="social__link"
+										><img src="@img/icons/linkedin.svg" alt="Linkedin"
+									/></a>
 								</li>
 							</ul>
 						</div>
@@ -283,6 +286,7 @@
 									</article>
 								</div>
 							</div>
+							<div class="swiper-pagination"></div>
 						</div>
 					</div>
 				</section>
