--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -79,16 +79,16 @@
 		<div class="footer__container">
 			<ul class="footer__social social">
 				<li class="social__item">
-					<a href="" class="social__link _icon-s-instagram"></a>
+					<a href="https://github.com/VitaliiSoloninko" class="social__link">
+						<img src="@img/icons/github.svg" alt="GitHub" />
+					</a>
 				</li>
 				<li class="social__item">
-					<a href="" class="social__link _icon-s-git"></a>
-				</li>
-				<li class="social__item">
-					<a href="" class="social__link _icon-s-twitter"></a>
-				</li>
-				<li class="social__item">
-					<a href="" class="social__link _icon-s-linkedin"></a>
+					<a
+						href="https://www.linkedin.com/in/vitalii-soloninko-1a3987271/"
+						class="social__link"
+						><img src="@img/icons/linkedin.svg" alt="Linkedin"
+					/></a>
 				</li>
 			</ul>
 			<div class="footer__copy">© 2024 - Vitalii Soloninko</div>
