Portfolio version 2.3 section portfolio finish

--- a/src/index.html
+++ b/src/index.html
@@ -60,51 +60,52 @@
 								<div class="title__label">MY WORKS</div>
 								<h2 class="title__value">Featured Portfolios</h2>
 							</div>
-							<div class="portfolio__controls">
+							<div
+								class="portfolio__controls"
+								data-da=".portfolio__slider,767.98"
+							>
 								<button
 									type="button"
-									class="portfolio__arrow portfolio__arrow_left _icon-slider-arrow"
-								></button>
+									class="portfolio__arrow portfolio__arrow_left"
+								>
+									<img src="@img/icons/arrow.svg" alt="l" />
+								</button>
 								<button
 									type="button"
-									class="portfolio__arrow portfolio__arrow_right _icon-slider-arrow"
-								></button>
+									class="portfolio__arrow portfolio__arrow_right"
+								>
+									<img src="@img/icons/arrow.svg" alt="r" />
+								</button>
 							</div>
 						</div>
 						<div class="portfolio__slider swiper">
 							<div class="portfolio__wrapper swiper-wrapper">
-								<div class="portfolio__slide swiper-slide">
+								<div class="portfolio__slide swiper-slide furino">
 									<article class="item-portfolio">
 										<a
 											href="https://vitaliisoloninko.github.io/Furino/"
 											class="item-portfolio__image-ibg"
 										>
-											<img src="@img/portfolio/01-Furino.png" alt="Furino" />
+											<img src="@img/portfolio/Furino.jpg" alt="Furino" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
 													href="https://vitaliisoloninko.github.io/Furino/"
 													class="item-portfolio__link-title"
-													>Furino</a
-												>
+													>Furino - Furniture shop
+												</a>
 											</h4>
 											<div class="item-portfolio__footer">
-												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>JavaScript</a
-												>
-												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>SCSS</a
-												>
-												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>JSON</a
-												>
+												<div class="item-portfolio__category category-link">
+													JavaScript
+												</div>
+												<div class="item-portfolio__category category-link">
+													SCSS
+												</div>
+												<div class="item-portfolio__category category-link">
+													JSON
+												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/Furino/"
 													class="item-portfolio__link _icon-link"
@@ -113,41 +114,32 @@
 										</div>
 									</article>
 								</div>
-								<div class="portfolio__slide swiper-slide">
+								<div class="portfolio__slide swiper-slide farmvest">
 									<article class="item-portfolio">
 										<a
 											href="https://vitaliisoloninko.github.io/FarmVest/"
 											class="item-portfolio__image-ibg"
 										>
-											<img
-												src="@img/portfolio/02-FarmVest.png"
-												alt="FarmVest"
-											/>
+											<img src="@img/portfolio/FarmVest.jpg" alt="FarmVest" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
 													href="https://vitaliisoloninko.github.io/FarmVest/"
 													class="item-portfolio__link-title"
-													>FarmVest
+													>FarmVest - Investment company
 												</a>
 											</h4>
 											<div class="item-portfolio__footer">
-												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>JavaScript</a
-												>
-												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>GULP</a
-												>
-												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>Webpack</a
-												>
+												<div class="item-portfolio__category category-link">
+													JavaScript
+												</div>
+												<div class="item-portfolio__category category-link">
+													GULP
+												</div>
+												<div class="item-portfolio__category category-link">
+													Webpack
+												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/FarmVest/"
 													class="item-portfolio__link _icon-link"
@@ -156,38 +148,32 @@
 										</div>
 									</article>
 								</div>
-								<div class="portfolio__slide swiper-slide">
+								<div class="portfolio__slide swiper-slide crowfy">
 									<article class="item-portfolio">
 										<a
 											href="https://vitaliisoloninko.github.io/Growfy/"
 											class="item-portfolio__image-ibg"
 										>
-											<img src="@img/portfolio/03-Crowfy.png" alt="Crowfy" />
+											<img src="@img/portfolio/Crowfy.jpg" alt="Crowfy" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
 													href="https://vitaliisoloninko.github.io/Growfy/"
 													class="item-portfolio__link-title"
-													>Crowfy</a
+													>Crowfy - Marketing agency</a
 												>
 											</h4>
 											<div class="item-portfolio__footer">
-												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>Java Script</a
-												>
-												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>CSS</a
-												>
-												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>HTML</a
-												>
+												<div class="item-portfolio__category category-link">
+													JavaScript
+												</div>
+												<div class="item-portfolio__category category-link">
+													CSS
+												</div>
+												<div class="item-portfolio__category category-link">
+													HTML
+												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/Growfy/"
 													class="item-portfolio__link _icon-link"
@@ -196,97 +182,214 @@
 										</div>
 									</article>
 								</div>
-								<div class="portfolio__slide swiper-slide">
+								<div class="portfolio__slide swiper-slide homepro">
 									<article class="item-portfolio">
-										<a href="" class="item-portfolio__image-ibg">
+										<a
+											href="https://vitaliisoloninko.github.io/HomePro/"
+											class="item-portfolio__image-ibg"
+										>
+											<img src="@img/portfolio/HomePro.jpg" alt="HomePro" />
+										</a>
+										<div class="item-portfolio__body">
+											<h4 class="item-portfolio__title">
+												<a
+													href="https://vitaliisoloninko.github.io/HomePro/"
+													class="item-portfolio__link-title"
+													>HomePro - Home services
+												</a>
+											</h4>
+											<div class="item-portfolio__footer">
+												<div class="item-portfolio__category category-link">
+													JavaScript
+												</div>
+												<div class="item-portfolio__category category-link">
+													GULP
+												</div>
+												<div class="item-portfolio__category category-link">
+													Webpack
+												</div>
+												<a
+													href="https://vitaliisoloninko.github.io/HomePro/"
+													class="item-portfolio__link _icon-link"
+												></a>
+											</div>
+										</div>
+									</article>
+								</div>
+								<div class="portfolio__slide swiper-slide tealand">
+									<article class="item-portfolio">
+										<a
+											href="https://vitaliisoloninko.github.io/TeaLand/"
+											class="item-portfolio__image-ibg"
+										>
+											<img src="@img/portfolio/TeaLand.jpg" alt="TeaLand" />
+										</a>
+										<div class="item-portfolio__body">
+											<h4 class="item-portfolio__title">
+												<a
+													href="https://vitaliisoloninko.github.io/TeaLand/"
+													class="item-portfolio__link-title"
+													>TeaLand - Cafe</a
+												>
+											</h4>
+											<div class="item-portfolio__footer">
+												<div class="item-portfolio__category category-link">
+													JavaScript
+												</div>
+												<div class="item-portfolio__category category-link">
+													GULP
+												</div>
+												<div class="item-portfolio__category category-link">
+													Webpack
+												</div>
+												<a
+													href="https://vitaliisoloninko.github.io/TeaLand/"
+													class="item-portfolio__link _icon-link"
+												></a>
+											</div>
+										</div>
+									</article>
+								</div>
+								<div class="portfolio__slide swiper-slide rhythm">
+									<article class="item-portfolio">
+										<a
+											href="https://vitaliisoloninko.github.io/Guitar/"
+											class="item-portfolio__image-ibg"
+										>
+											<img src="@img/portfolio/Guitar.jpg" alt="Guitar" />
+										</a>
+										<div class="item-portfolio__body">
+											<h4 class="item-portfolio__title">
+												<a
+													href="https://vitaliisoloninko.github.io/Guitar/"
+													class="item-portfolio__link-title"
+													>Rhythm - Guitar shop
+												</a>
+											</h4>
+											<div class="item-portfolio__footer">
+												<div class="item-portfolio__category category-link">
+													JavaScript
+												</div>
+												<div class="item-portfolio__category category-link">
+													CSS
+												</div>
+												<div class="item-portfolio__category category-link">
+													HTML
+												</div>
+												<a
+													href="https://vitaliisoloninko.github.io/Guitar/"
+													class="item-portfolio__link _icon-link"
+												></a>
+											</div>
+										</div>
+									</article>
+								</div>
+								<div class="portfolio__slide swiper-slide relvise">
+									<article class="item-portfolio">
+										<a
+											href="https://vitaliisoloninko.github.io/Relvise/"
+											class="item-portfolio__image-ibg"
+										>
+											<img src="@img/portfolio/Relvise.jpg" alt="Relvise" />
+										</a>
+										<div class="item-portfolio__body">
+											<h4 class="item-portfolio__title">
+												<a
+													href="https://vitaliisoloninko.github.io/Relvise/"
+													class="item-portfolio__link-title"
+													>Relvise - Finance and Consultancy
+												</a>
+											</h4>
+											<div class="item-portfolio__footer">
+												<div class="item-portfolio__category category-link">
+													JavaScript
+												</div>
+												<div class="item-portfolio__category category-link">
+													CSS
+												</div>
+												<div class="item-portfolio__category category-link">
+													HTML
+												</div>
+												<a
+													href="https://vitaliisoloninko.github.io/Relvise/"
+													class="item-portfolio__link _icon-link"
+												></a>
+											</div>
+										</div>
+									</article>
+								</div>
+								<div class="portfolio__slide swiper-slide smartspace">
+									<article class="item-portfolio">
+										<a
+											href="https://vitaliisoloninko.github.io/SmartSpace/"
+											class="item-portfolio__image-ibg"
+										>
 											<img
-												src="@img/portfolio/04-Portfolio.png"
-												alt="Portfolio"
+												src="@img/portfolio/SmartSpace.jpg"
+												alt="SmartSpace"
 											/>
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
-												<a href="" class="item-portfolio__link-title"
-													>Portfolio</a
-												>
+												<a
+													href="https://vitaliisoloninko.github.io/SmartSpace/"
+													class="item-portfolio__link-title"
+													>Relvise - Finance and Consultancy
+												</a>
 											</h4>
 											<div class="item-portfolio__footer">
+												<div class="item-portfolio__category category-link">
+													JavaScript
+												</div>
+												<div class="item-portfolio__category category-link">
+													CSS
+												</div>
+												<div class="item-portfolio__category category-link">
+													HTML
+												</div>
 												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>React</a
-												>
-												<a href="" class="item-portfolio__link _icon-link"></a>
+													href="https://vitaliisoloninko.github.io/SmartSpace/"
+													class="item-portfolio__link _icon-link"
+												></a>
 											</div>
 										</div>
 									</article>
 								</div>
-								<div class="portfolio__slide swiper-slide">
+								<div class="portfolio__slide swiper-slide portfolio">
 									<article class="item-portfolio">
-										<a href="" class="item-portfolio__image-ibg">
-											<img src="@img/portfolio/05-TeaLand.png" alt="TeaLand" />
+										<a
+											href="https://vitaliisoloninko.github.io/Portfolio/"
+											class="item-portfolio__image-ibg"
+										>
+											<img src="@img/portfolio/Portfolio.jpg" alt="Portfolio" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
-												<a href="" class="item-portfolio__link-title"
-													>TeaLand</a
-												>
+												<a
+													href="https://vitaliisoloninko.github.io/Portfolio/"
+													class="item-portfolio__link-title"
+													>Portfolio - Site with my works
+												</a>
 											</h4>
 											<div class="item-portfolio__footer">
+												<div class="item-portfolio__category category-link">
+													JavaScript
+												</div>
+												<div class="item-portfolio__category category-link">
+													GULP
+												</div>
+												<div class="item-portfolio__category category-link">
+													Webpack
+												</div>
 												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>React</a
-												>
-												<a href="" class="item-portfolio__link _icon-link"></a>
-											</div>
-										</div>
-									</article>
-								</div>
-								<div class="portfolio__slide swiper-slide">
-									<article class="item-portfolio">
-										<a href="" class="item-portfolio__image-ibg">
-											<img src="@img/portfolio/06-Guitar.png" alt="Guitar" />
-										</a>
-										<div class="item-portfolio__body">
-											<h4 class="item-portfolio__title">
-												<a href="" class="item-portfolio__link-title">Guitar</a>
-											</h4>
-											<div class="item-portfolio__footer">
-												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>React</a
-												>
-												<a href="" class="item-portfolio__link _icon-link"></a>
-											</div>
-										</div>
-									</article>
-								</div>
-								<div class="portfolio__slide swiper-slide">
-									<article class="item-portfolio">
-										<a href="" class="item-portfolio__image-ibg">
-											<img src="@img/portfolio/07-Relvise.png" alt="Relvise" />
-										</a>
-										<div class="item-portfolio__body">
-											<h4 class="item-portfolio__title">
-												<a href="" class="item-portfolio__link-title"
-													>Relvise</a
-												>
-											</h4>
-											<div class="item-portfolio__footer">
-												<a
-													href=""
-													class="item-portfolio__category category-link"
-													>React</a
-												>
-												<a href="" class="item-portfolio__link _icon-link"></a>
+													href="https://vitaliisoloninko.github.io/Portfolio/"
+													class="item-portfolio__link _icon-link"
+												></a>
 											</div>
 										</div>
 									</article>
 								</div>
 							</div>
-							<div class="swiper-pagination"></div>
 						</div>
 					</div>
 				</section>
