Portfolio version 2.4 section experiences finish

--- a/src/index.html
+++ b/src/index.html
@@ -409,10 +409,10 @@
 									type="button"
 									class="navigation-career__title _tab-active"
 								>
-									Freelance
+									2022 - 2024 Front-end
 								</button>
 								<button type="button" class="navigation-career__title">
-									Grand
+									2009 - 2022 IT Center Grand
 								</button>
 							</nav>
 							<div data-tabs-body class="career__content content-career">
@@ -486,13 +486,13 @@
 												Graphic design - Figma, Illustrator, Inkscape
 											</li>
 											<li class="list-content-career__item">
-												Microsoft Office - Word, Excel, PowerPoint (perfect)
+												Microsoft Office - Word, Excel, PowerPoint
 											</li>
 											<li class="list-content-career__item">
 												3D graphics - Blender, SketchUp
 											</li>
 											<li class="list-content-career__item">
-												Video editing - DaVinci Resolve, Adobe Premiere Pro
+												Video editing - DaVinci Resolve, Premiere Pro
 											</li>
 										</ul>
 									</div>
